Fix display bug for radios on iphone

--- a/apps/fretonator-web/src/app/common/chips/chip/chip.component.scss
+++ b/apps/fretonator-web/src/app/common/chips/chip/chip.component.scss
@@ -35,6 +35,7 @@
   width: 0;
   height: 0;
   appearance: none;
+  visibility: hidden;
 }
 
 .input:checked ~ .chip {
